--- a/beatels.html
+++ b/beatels.html
@@ -9,25 +9,25 @@
 <body>
     
     <div class="container">
-        <section>
+        <section class="beatle" id="john">
             <div class="naam">
                 <h3>John</h3>
                 <p>Lennon</p>
             </div>
         </section>
-        <section>
+        <section class="beatle" id="paul">
             <div class="naam">
                 <h3>Paul</h3>
                 <p>McCartney</p>
             </div>
         </section>
-        <section>
+        <section class="beatle" id="ringo">
             <div class="naam">
                 <h3>Ringo</h3>
                 <p>Starr</p>
             </div>
         </section>
-        <section>
+        <section class="beatle" id="george">
             <div class="naam">
                 <h3>George</h3>
                 <p>Marrison</p>
